<resources>
    <string name="app_name">ShoppingList</string>
    <string name="list_item_name">My List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_list">Add List</string>
    <string name="hint_title">List title</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">List not saved because it is empty.</string>
    <string name="list_save_error">Error saving list!</string>
    <string name="total_text">"Total: "</string>
    <string name="total_zero">0.00</string>
    <string name="quantity">"Quantity: "</string>
    <string name="price">Price: 0.00</string>
    <string name="edit_list">Edit List</string>
    <string name="list_name">List Name</string>
    <string name="list_total">Total:</string>
    <string name="dialog_message">Add new item</string>
    <string name="dialog_title">Title for new list</string>
    <string name="ok">OK</string>
    <string name="dialog_title_add_list">Add new list</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_quantity">Item Quantity</string>
    <string name="hint_item_price">Item Price</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_item_details">Item details</string>
    <string name="delete">Delete</string>
</resources>
